# BasicTasksLearning_RecommenderSystem

./: .gitignore  Note1.ipynb  Note1_Gam1Mieng.ipynb  Note2_3methodBasic.ipynb  Note3_.ipynb  README.md  proposal.md
code/: code1_ottorecomsys-frequencybased-ottodataset-kaggle.ipynb  code2_MatrixFactorization.ipynb  code2_withRapid.ipynb  code_ottorecomsys-frequencybased-ottodataset-kaggle.ipynb
note/: Tổng hợp các solution OTTO Recommender System.docx  note0_Gam1Mieng_DefineProblem.ipynb  note1_contentBased_collaborativeFiltering.ipynb  note2_MatrixFactorization.ipynb  note2_MatrixFactorizationOPTIMIZATION.ipynb  note2_someMethodBasic.ipynb  note3_GradientBoosted.ipynb  note3_transformer.ipynb  note4_Họp.ipynb  note4_SomeSol.ipynb  note5_report_slide.ipynb
report_slide/: OTTO_WebMining.pptx  Web Mining - Final Report.docx
utils/: SomeTalk.md  Web Mining Proposal.docx  prepareReport.xlsx  references.md
utils/reference/ref1/: Hybrid Recommendation System using Python.ipynb  Hybrid_ContentBasedColloborativeFiltering_RecSys.ipynb  pyproject.toml  requirements.txt
utils/reference/ref2/: Báo cáo ProjectIII.docx  linkRef2.md
